<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:ignore="NewApi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <Button
                    android:id="@+id/button_refresh_status"
                    style="@style/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check_fingerprint" />

                <ImageView
                    android:id="@+id/requires_refresh"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="start|center_vertical"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_fingerprint_error"
                    android:textColor="@color/error_color"
                    android:visibility="invisible"
                    tools:visibility="visible" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/button_login"
                    style="@style/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_login" />

                <TextView
                    android:id="@+id/login_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|top"
                    android:layout_marginTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/login_successful"
                    android:textColor="?android:attr/colorAccent"
                    android:visibility="gone"
                    tools:visibility="visible" />

            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/button_create_key"
                    style="@style/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fingerprint_create_key" />

                <TextView
                    android:id="@+id/create_key_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|top"
                    android:layout_marginTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:textColor="?android:attr/colorAccent"
                    android:visibility="gone"
                    tools:text="Create key message"
                    tools:visibility="visible" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/button_delete_key"
                    style="@style/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fingerprint_delete_key" />

                <TextView
                    android:id="@+id/delete_key_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|top"
                    android:layout_marginTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:textColor="?android:attr/colorAccent"
                    android:visibility="gone"
                    tools:text="Delete key message"
                    tools:visibility="visible" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/button_security_settings"
                    style="@style/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_security_settings" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/button_start_bottom_sheet"
                    style="@style/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_start_bottom_sheet" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
</ScrollView>